--- a/src/index.css
+++ b/src/index.css
@@ -5,9 +5,96 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  color: #000;
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+.nav {
+  background-color: #000;
+}
+.nav-flex {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.nav-items {
+  list-style: none;
+  display: flex;
+  color: #fff;
+}
+
+.nav-items > li {
+  padding: 10px;
+}
+
+img.App-logo {
+  width: 16%;
+}
+
+.App-logo {
+  animation: App-logo-spin infinite 20s linear;
+}
+
+@keyframes App-logo-spin {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
+}
+
+footer {
+  background-color: #000;
+  padding: 10px;
+  text-align: center;
+  color: #fff;
+}
+
+
+ul {
+  margin-bottom: 0;
+  padding-bottom: 10px;
+}
+
+
+h1.akash {
+  margin-top: 0;
+  padding-top: 10px;
+}
+
+
+main {
+  height: auto !important;
+  min-height: 100% !important;
+  /* background-color: #202020; */
+}
+
+.container-fluid {
+  padding: 0;
+}
+
+
+.section h1, .section h2{
+	color:#28AADC;
+	margin-bottom: 2em;
+}
+
+@media (max-width: 575px) {
+  .section h1, .section h2, h4 {
+    font-size: 1rem;
+  }
+}
+
+
+.section h1 span, 
+.section h2 span {
+  color: #fff;
+  background-color: #64EBB6;
+  padding: 5px;
 }
