--- a/src/index.css
+++ b/src/index.css
@@ -33,7 +33,7 @@ code {
 }
 
 img.App-logo {
-  width: 16%;
+  width: 60%;
 }
 
 .App-logo {
@@ -76,7 +76,7 @@ main {
 }
 
 .container-fluid {
-  padding: 0;
+  padding: 0 !important;
 }
 
 
@@ -97,4 +97,12 @@ main {
   color: #fff;
   background-color: #64EBB6;
   padding: 5px;
+}
+.backimg {
+  background: url(/src/assets/img/dribbble_shot_2.png);
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center center;
+  width: 100%;
+  height: 10rem;
 }
